--- a/index.html
+++ b/index.html
@@ -41,11 +41,24 @@
                     <p>Filter Search</p>
                     <ul class="bg-dark list-group">
                         <li class="bg-dark list-group-item">
-                            <label for="date">Enter Date</label>
+                            <label for="datetime">Enter Date</label>
                             <input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
                         <li class="bg-dark list-group-item">
-                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                            <label for="city">Enter a City</label>
+                            <input type="text" placeholder="roswell" id="city" />
+                        </li>
+                        <li class="bg-dark list-group-item">
+                            <label for="state">Enter a State</label>
+                            <input type="text" placeholder="nm" id="state" />
+                        </li>
+                        <li class="bg-dark list-group-item">
+                            <label for="country">Enter a Country</label>
+                            <input type="text" placeholder="us" id="country" />
+                        </li>
+                        <li class="bg-dark list-group-item">
+                            <label for="shape">Enter a Shape</label>
+                            <input type="text" placeholder="circle" id="shape" />
                         </li>
                     </ul>
                 </form>
